k8s_manifests/frontend.yml
#Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    project: demo
    tier: frontend
  namespace: frontend
  annotations:
    kubernetes.io/change-cause: "Initial release"
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        project: demo
        tier: frontend
    spec:
      containers:
      - name: frontend-container
        image: 481918251/application-code_reactjs-app
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 5
          successThreshold: 1
