k8s_manifests/db_ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: db
  labels:
    project: demo
    tier: db

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    project: demo
    tier: db
  namespace: db
spec:
  selector:
    matchLabels:
      project: demo
      tier: db
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        project: demo
        tier: db
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 128Mi
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
      labels:
        project: demo
        tier: db
      namespace: db
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
      storageClassName: ebs-sc

---

#Write k8s manifest file for Mysql statefulset and headless service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: db
  labels:
    project: demo
    tier: db
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    tier: db
  clusterIP: None
